# tess

./: README.md  game.pgn  simple.pgn  tess.py
rust/: Cargo.toml
rust/src/: main.rs
